--- a/spyrothon_admin/src/modules/auth/AuthLogin.module.css
+++ b/spyrothon_admin/src/modules/auth/AuthLogin.module.css
@@ -1,4 +1,5 @@
-.container {
+.positioner {
+  margin-top: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6,8 +7,4 @@
 
 .box {
   width: 380px;
-  height: 240px;
-  padding: 16px;
-  border: var(--border-primary);
-  border-radius: 4px;
 }
