--- a/spyrothon_admin/src/modules/connection/StatusDot.module.css
+++ b/spyrothon_admin/src/modules/connection/StatusDot.module.css
@@ -6,13 +6,13 @@
 }
 
 .good {
-  background-color: var(--green);
+  background-color: var(--status-success-background);
 }
 
 .bad {
-  background-color: var(--red);
+  background-color: var(--status-danger-background);
 }
 
 .busy {
-  background-color: var(--blue);
+  background-color: var(--status-info-background);
 }
