--- a/spyrothon_admin/src/modules/participants/SelectParticipantPopout.module.css
+++ b/spyrothon_admin/src/modules/participants/SelectParticipantPopout.module.css
@@ -1,7 +1,7 @@
 .participant {
   margin: -8px 0px;
   padding: 8px;
-  border-radius: 4px;
+  border-radius: var(--radius-normal);
   cursor: pointer;
 
   &:hover {
