--- a/spyrothon_admin/src/modules/rtmp/RTMPStreams.module.css
+++ b/spyrothon_admin/src/modules/rtmp/RTMPStreams.module.css
@@ -1,7 +1,7 @@
 .container {
   background-color: var(--background-tertiary);
   padding: 16px;
-  border-radius: 4px;
+  border-radius: var(--radius-normal);
   margin: 8px 0;
 }
 
