--- a/spyrothon_app/src/modules/schedules/Schedule.module.css
+++ b/spyrothon_app/src/modules/schedules/Schedule.module.css
@@ -53,7 +53,7 @@
   width: 100%;
   padding: 8px;
   margin: 4px 0;
-  border-radius: 4px;
+  border-radius: var(--radius-normal);
   text-shadow: 0 1px 6px #000;
 }
 
